version/0.3/_sources/examples/evaluate_design/01_ten_bar_truss.rst.txt

.. DO NOT EDIT.
.. THIS FILE WAS AUTOMATICALLY GENERATED BY SPHINX-GALLERY.
.. TO MAKE CHANGES, EDIT THE SOURCE PYTHON FILE:
.. "examples/evaluate_design/01_ten_bar_truss.py"
.. LINE NUMBERS ARE GIVEN BELOW.

.. only:: html

    .. note::
        :class: sphx-glr-download-link-note

        :ref:`Go to the end <sphx_glr_download_examples_evaluate_design_01_ten_bar_truss.py>`
        to download the full example code

.. rst-class:: sphx-glr-example-title

.. _sphx_glr_examples_evaluate_design_01_ten_bar_truss.py:


.. _ref_ten_bar_truss_evaluate_design:

Ten bar truss
-------------

This example demonstrates the evaluation of designs.

It uses the ``evaluate_design()`` method at the
root level of a project.

First, a reference design is obtained and then
cross section areas are decreased in each iteration to minimize mass, while
satisfying defined constraints of maximum stress for two loading conditions.

The example project has been prepared in a certain way to support the
"Design evaluation" use case:

- Workflow components have been created at the root system level.
- Parameters and responses have been registered at the root system level.
- Proper workflow components have been connected to the root system using
  **Receive designs** and **Send back designs** options.

For more information, see the optiSLang user documentation on generating
workflows.

This image shows the workflow:

.. GENERATED FROM PYTHON SOURCE LINES 31-37

Workflow:
 .. image:: ../../_static/01_ten_bar_truss_evaluate_design.png
  :width: 400
  :alt: Result of script.

########################################################

.. GENERATED FROM PYTHON SOURCE LINES 39-42

Perform required imports
~~~~~~~~~~~~~~~~~~~~~~~~
Perform the required imports.

.. GENERATED FROM PYTHON SOURCE LINES 42-51

.. code-block:: default


    from pathlib import Path
    import tempfile

    import matplotlib.pyplot as plt

    from ansys.optislang.core import Optislang
    import ansys.optislang.core.examples as examples


.. GENERATED FROM PYTHON SOURCE LINES 52-55

Create optiSLang instance
~~~~~~~~~~~~~~~~~~~~~~~~~
Create the optiSLang instance.

.. GENERATED FROM PYTHON SOURCE LINES 55-64

.. code-block:: default


    example_path = examples.get_files("ten_bar_truss")[1][0]
    tmp_dir = Path(tempfile.mkdtemp())
    file_path = tmp_dir / "evaluate_design_example.opf"

    osl = Optislang(project_path=example_path)
    osl.save_as(file_path)
    print(osl.get_working_dir())


.. GENERATED FROM PYTHON SOURCE LINES 65-68

Evaluate reference design
~~~~~~~~~~~~~~~~~~~~~~~~~
Get the reference design, evaluate it, and extract the results.

.. GENERATED FROM PYTHON SOURCE LINES 68-90

.. code-block:: default


    rs = osl.project.root_system
    parameters_count = len(rs.parameter_manager.get_parameters_names())
    try_decrease_param = [True for i in range(parameters_count)]
    successfull_designs = []
    unsuccessfull_designs = []

    design = rs.get_reference_design()
    rs.evaluate_design(design)
    if design.feasibility:
        successfull_designs.append(design)
    else:
        raise ValueError("Constraints not satisfied for reference design, do not start example.")

    objectives = {obj.name: obj.value for obj in design.objectives}
    responses = {resp.name: resp.value for resp in design.responses}
    plot_mass_successfull = [(1, objectives["obj"])]
    plot_mass_unsuccessfull = []

    plot_max_stress_lc1 = [abs(max(responses["stress"], key=abs))]
    plot_max_stress_lc2 = [abs(max(responses["stress_lc2"], key=abs))]


.. GENERATED FROM PYTHON SOURCE LINES 91-97

Decrease cross section areas
~~~~~~~~~~~~~~~~~~~~~~~~~~~~
Copy the last successful design and gradually decrease
cross section areas of each truss, storing the results.
If decreasing a cross sectional area leads to violation
of constraints, stop decreasing it.

.. GENERATED FROM PYTHON SOURCE LINES 97-127

.. code-block:: default


    design_count = 1
    while True in try_decrease_param:
        for j in range(parameters_count):
            if not try_decrease_param[j]:
                continue
            design_count += 1
            design = successfull_designs[-1].copy_unevaluated_design()
            parameters = design.parameters
            parameter_value = parameters[j].value
            if parameter_value > 1:
                parameters[j].value = parameter_value - 1
            else:
                try_decrease_param[j] = False
                continue
            rs.evaluate_design(design)
            if design.feasibility:
                successfull_designs.append(design)
                objectives = {obj.name: obj.value for obj in design.objectives}
                responses = {resp.name: resp.value for resp in design.responses}
                plot_mass_successfull.append((design_count, objectives["obj"]))
            else:
                unsuccessfull_designs.append(design)
                objectives = {obj.name: obj.value for obj in design.objectives}
                responses = {resp.name: resp.value for resp in design.responses}
                try_decrease_param[j] = False
                plot_mass_unsuccessfull.append((design_count, objectives["obj"]))
            plot_max_stress_lc1.append(abs(max(responses["stress"], key=abs)))
            plot_max_stress_lc2.append(abs(max(responses["stress_lc2"], key=abs)))


.. GENERATED FROM PYTHON SOURCE LINES 128-132

Extract cross sectional areas
~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
From the last successful design, extract cross sectional areas, objective,
and constraints.

.. GENERATED FROM PYTHON SOURCE LINES 132-141

.. code-block:: default


    best_design = successfull_designs[-1]
    print("*-----------BEST-DESIGN-PARAMETERS-------------*")
    for parameter in best_design.parameters:
        print(parameter.name, parameter.value)
    print("*-----------BEST-DESIGN-OBJECTIVE-------------*")
    for objective in best_design.objectives:
        print(objective.name, objective.value)


.. GENERATED FROM PYTHON SOURCE LINES 142-145

Stop and cancel project
~~~~~~~~~~~~~~~~~~~~~~~
Stop and cancel the project.

.. GENERATED FROM PYTHON SOURCE LINES 145-148

.. code-block:: default


    osl.dispose()


.. GENERATED FROM PYTHON SOURCE LINES 149-152

Plot extracted results
~~~~~~~~~~~~~~~~~~~~~~
Plot the extracted results.

.. GENERATED FROM PYTHON SOURCE LINES 152-179

.. code-block:: default


    fig, axs = plt.subplots(2)
    fig.suptitle("Optimization of ten bar truss cross section areas")

    s1 = axs[0].scatter(
        [xy[0] for xy in plot_mass_successfull],
        [xy[1] for xy in plot_mass_successfull],
        color="g",
        label="successful",
    )
    s2 = axs[0].scatter(
        [xy[0] for xy in plot_mass_unsuccessfull],
        [xy[1] for xy in plot_mass_unsuccessfull],
        color="r",
        label="unsuccessful",
    )
    axs[0].set_ylabel("mass")
    axs[0].legend()

    (l1,) = axs[1].plot(range(1, design_count + 1), plot_max_stress_lc1, color="b", label="lc1")
    axs[1].hlines(y=25000, xmin=1, xmax=design_count, color="b", linestyles="--")
    (l2,) = axs[1].plot(range(1, design_count + 1), plot_max_stress_lc2, color="c", label="lc2")
    axs[1].hlines(y=35000, xmin=1, xmax=design_count, color="c", linestyles="--")
    axs[1].set_xlabel("design ID")
    axs[1].set_ylabel("max stress")
    axs[1].legend(handles=[l1, l2])
    plt.show()


.. rst-class:: sphx-glr-timing

   **Total running time of the script:** ( 0 minutes  0.000 seconds)


.. _sphx_glr_download_examples_evaluate_design_01_ten_bar_truss.py:

.. only:: html

  .. container:: sphx-glr-footer sphx-glr-footer-example




    .. container:: sphx-glr-download sphx-glr-download-python

      :download:`Download Python source code: 01_ten_bar_truss.py <01_ten_bar_truss.py>`

    .. container:: sphx-glr-download sphx-glr-download-jupyter

      :download:`Download Jupyter notebook: 01_ten_bar_truss.ipynb <01_ten_bar_truss.ipynb>`


.. only:: html

 .. rst-class:: sphx-glr-signature

    `Gallery generated by Sphinx-Gallery <https://sphinx-gallery.github.io>`_
